--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <p>Built a static website using HTML, CSS, and Bootstrap. The site features a responsive, user-friendly design showcasing various projects with clean layout and seamless device adaptation.</p>
 
              <div class="btns">
-            <a href="foodmunchsaj.ccbp.tech" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://foodmunchsaj.ccbp.tech/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://learning.ccbp.in/frontend-code-playground/2feac777-76a7-4fed-a47d-dbe3bd5edcf2" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -226,7 +226,7 @@
         <div class="desc">
           <p>Created a ChatGPT-like chat application using Meta AI and Facebook's framework, utilizing machine learning and natural language processing to deliver enhanced conversational experiences for users.</p>
           <div class="btns">
-            <a href="playgensaj.ccbp.tech" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://playgensaj.ccbp.tech/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://learning.ccbp.in/frontend-code-playground/2312b570-1166-46c4-b142-b4f2d8a1c72e" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -244,7 +244,7 @@
         <div class="desc">
           <p>Developed a job application platform using the MERN stack (MongoDB, Express.js, ReactJS, Node.js), enabling users to search, apply, and manage job listings with seamless real-time functionality and user authentication.</p>
           <div class="btns">
-            <a href="jobbysaj.ccbp.tech" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://jobbysaj.ccbp.tech/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -260,7 +260,7 @@
         <div class="desc">
           <p>Developed a Eccommerce application platform using the MERN stack (MongoDB, Express.js, ReactJS, Node.js), enabling users to search, apply, and manage job listings with seamless real-time functionality and user authentication.</p>
          <div class="btns">
-            <a href="jobbysaj.ccbp.tech" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://nxttrendssaj.ccbp.tech/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
