--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     Favicon
-    <link id='favicon' rel="shortcut icon" href="./assests/images/potrait.jpeg" type="image/x-png">
+    <!-- <link id='favicon' rel="shortcut icon" href="./assests/images/potrait.jpeg" type="image/x-png"> -->
     <title> Sajish Kumar </title>
     
 <script type="text/javascript"
@@ -72,7 +72,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assests/images/sajish_crousal.jpeg" alt="">
+    <img draggable="false" class="tilt" src="./assests/images/sajish_profile.jpeg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -85,7 +85,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assests/images/sajish_crousal.jpeg" alt="">
+        <img draggable="false" class="tilt" src="./assests/images/sajish_profile.jpeg" alt="">
     </div>
     <div class="content">
         <h3>I'm Sajish</h3>
